--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ hr {
   width: 5%;
 }
 
+img:hover{
+  background-color: rgb(30, 10, 102);
+}
+
 h1{
   color: #66BFBF;
 }
@@ -19,3 +23,15 @@ h1{
 h3{
   color: #66BFBF;
 }
+
+/* we can style specific element of a tag using class */
+/* 
+.myphoto {
+  background-color: red;
+} */
+
+/* we can style specific element of a tag using id also */
+
+/* #name {
+  color: black;
+} */
