--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ hr {
   width: 5%;
 }
 
-img:hover{
+img:hover{       /*when we roll mouse over the element changes its color*/
   background-color: rgb(30, 10, 102);
 }
 
@@ -25,10 +25,12 @@ h3{
 }
 
 /* we can style specific element of a tag using class */
-/* 
+
 .myphoto {
-  background-color: red;
-} */
+  border-radius: 50%;
+  width: 170px;
+  height: 170px;
+}
 
 /* we can style specific element of a tag using id also */
 
